templates/ui-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ui-gateway
  namespace: office
  labels:
    gateway: ui-gateway
    istio: ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - ui.office.23.101.74.16.nip.io
  - port:
      number: 80
      name: http2
      protocol: HTTP2
    hosts:
    - ui.office.23.101.74.16.nip.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-gw-virtualservice
  namespace: office
  labels:
    service: ui-gw-virtualservice
spec:
  hosts:
  - ui.office.23.101.74.16.nip.io
  gateways:
  - ui-gateway
  http:
  - match:
    - uri:
        prefix: /leave/
    route:
    - destination:
        host: leave
  - match:
    - uri:
        prefix: /meeting/
    route:
    - destination:
        host: meeting
  - match:
    - uri:
        prefix: /notification/
    route:
    - destination:
        host: notification
  - match:
    - uri:
        prefix: /organization/
    route:
    - destination:
        host: organization
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ui
